--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,8 +4,8 @@ project:
 
 book:
   title: "COMP/STAT112 Notebook"
-  author: "Your Name Here"
-  date: "Date Here"
+  author: "Basir Talayee"
+  date: "Sep 6th, 2024"
   reader-mode: true
   
   chapters:
