--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,7 @@ project:
 book:
   title: "COMP/STAT112 Notebook"
   author: "Basir Talayee"
-  date: "Sep 6th, 2024"
+  date: "09/06/2024"
   reader-mode: true
   
   chapters:
@@ -16,8 +16,13 @@ book:
       - activities/activity-01.qmd
       - activities/activity-02.qmd
       - activities/activity-03.qmd
+      - activities/quarto-demo.qmd
       
     
+    - part: refelections/README.qmd
+      chapters: 
+      - refelections/refelection.qmd
+  
     - part: notes/README.qmd
       chapters: 
       - notes/note-01.qmd
